--- a/BlogposterCMS/apps/designer/partials/builder-header.html
+++ b/BlogposterCMS/apps/designer/partials/builder-header.html
@@ -15,20 +15,20 @@
 
   <!-- Actions zusammengefasst -->
   <div class="header-actions">
-    <button id="saveLayoutBtn" class="button builder-save-btn">
-      <img src="/assets/icons/save.svg" class="icon" alt="Save" />
-      Save Layout
+    <button id="viewportControlBtn" class="button builder-viewport-btn">
+      <img src="/assets/icons/monitor.svg" class="icon" alt="Viewport" />
     </button>
+    <!--<button id="previewLayoutBtn" class="button builder-preview-btn">
+      <img src="/assets/icons/eye.svg" class="icon" alt="Preview" />
+      Preview
+    </button>-->
     <button id="publishLayoutBtn" class="button builder-publish-btn">
       <img src="/assets/icons/upload.svg" class="icon" alt="Publish" />
       Publish
     </button>
-    <button id="previewLayoutBtn" class="button builder-preview-btn">
-      <img src="/assets/icons/eye.svg" class="icon" alt="Preview" />
-      Preview
-    </button>
-    <button id="viewportControlBtn" class="button builder-viewport-btn">
-      <img src="/assets/icons/monitor.svg" class="icon" alt="Viewport" />
+    <button id="saveLayoutBtn" class="button builder-save-btn">
+      <img src="/assets/icons/save.svg" class="icon" alt="Save" />
+      Save
     </button>
     <button class="button builder-menu-btn">
       <img src="/assets/icons/ellipsis-vertical.svg" class="icon" alt="Menu" />
