Align builder sidebar with dashboard style

--- a/BlogposterCMS/apps/designer/assets/scss/designer.scss
+++ b/BlogposterCMS/apps/designer/assets/scss/designer.scss
@@ -1,6 +1,7 @@
 @use '../../../../public/assets/scss/variables' as *;
 @use '../../../../public/assets/scss/fonts';
 @use '../../../../public/assets/scss/components/grid-mode';
+@use '../../../../public/assets/scss/components/sidebar-bubble';
 @use 'publish-panel';
 @use 'variables';
 @use 'header';
