Show publish suggestions in popup

--- a/BlogposterCMS/apps/designer/partials/builder/publish-panel.html
+++ b/BlogposterCMS/apps/designer/partials/builder/publish-panel.html
@@ -6,7 +6,7 @@
     <input type="text" class="publish-slug-input" />
   </div>
 </label>
-<div class="publish-suggestions dropdown"></div>
+<div class="publish-suggestions builder-options-menu"></div>
 <div class="publish-warning hidden"></div>
 <label class="publish-draft hidden"><input type="checkbox" class="publish-draft-checkbox" /> Set page to draft</label>
 <div class="publish-info hidden"></div>
